lustre/ptlrpc/ptlrpc_internal.h
@@ -304,11 +304,6 @@ void sptlrpc_conf_choose_flavor(enum lustre_sec_part from,
 int  sptlrpc_conf_init(void);
 void sptlrpc_conf_fini(void);
 
-struct dentry;
-struct vfsmount;
-int lustre_rename(struct dentry *dir, struct vfsmount *mnt, char *old_name,
-		  char *new_name);
-
 /* sec.c */
 int  sptlrpc_init(void);
 void sptlrpc_fini(void);
