lustre/target/tgt_handler.c
@@ -893,7 +893,7 @@ int tgt_connect_check_sptlrpc(struct ptlrpc_request *req, struct obd_export *exp
 	return rc;
 }
 
-int tgt_adapt_sptlrpc_conf(struct lu_target *tgt, int initial)
+int tgt_adapt_sptlrpc_conf(struct lu_target *tgt)
 {
 	struct sptlrpc_rule_set	 tmp_rset;
 	int			 rc;
@@ -904,7 +904,7 @@ int tgt_adapt_sptlrpc_conf(struct lu_target *tgt, int initial)
 	}
 
 	sptlrpc_rule_set_init(&tmp_rset);
-	rc = sptlrpc_conf_target_get_rules(tgt->lut_obd, &tmp_rset, initial);
+	rc = sptlrpc_conf_target_get_rules(tgt->lut_obd, &tmp_rset);
 	if (rc) {
 		CERROR("%s: failed get sptlrpc rules: rc = %d\n",
 		       tgt_name(tgt), rc);
